--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="bottom">App made by Nathan Fallet\n© Groupe MINASTE</string>
 
     <!-- Game -->
+    <string name="again">Play again</string>
     <string name="back">Go back to the menu</string>
     <string name="playing_computer">Game is playing:\nComputer (%s), it\'s to you!</string>
     <string name="playing_human">Game is playing:\nPlayer %s, it\'s to you!</string>
