--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -9,6 +9,7 @@
     <string name="bottom">App créé par Nathan Fallet\n© Groupe MINASTE</string>
 
     <!-- Game -->
+    <string name="again">Rejouer</string>
     <string name="back">Retour au menu</string>
     <string name="playing_computer">Partie en cours :\nC\'est au tour de l\'ordinateur (%s) !</string>
     <string name="playing_human">Partie en cours :\nC\'est au tour du joueur %s !</string>
